deployment-ingress/traefik2/traefik-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  # type: NodePort only working for random ports
  # lets expose it with the host-ip (hostname -i)
  externalIPs: [ 10.0.0.242 ] # IP of your centos host
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik
