deployment-ingress/traefik2/flask-app-tls-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: default
  routes:
    - match: Host(`k8s.cno-user-XX-i-01.commandemy.training`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: flask-app
          port: 80
